	rd_loadobj_iter() errored, or if lmids never fell (suggesting a
	failure to traverse the link maps more than once).
	* test/triggers/libproc-pldd.c: Adjust for rl_iter_f change.
	* test/triggers/libproc-dlmadopen.c: Add some informational output
	to confirm that libraries were opened in multiple lmids.
	* test/triggers/libproc-sleeper.c: Add some output on exit, to
	detect crashes of the child.

2013-02-21  Nick Alcock  <nick.alcock@oracle.com>

	* libproc/Pcontrol.h (ps_prochandle_t.bkpt_halted): New, set while
	a breakpoint handler requests that we not continue execution.
	* libproc/Pcontrol.c (Puntrace): Do not resume even on top-level
	Puntrace() unless state is 0 or PS_RUN, and no breakpoint handler
	has requested that we stall.
	(bkpt_handle_start): Set bkpt_halted if a handler so requests.
	(bkpt_handle_singlestep): Likewise.
	(Punbkpt): Clear it if removing the current breakpoint.
	(Pbkpt_continue): Clear it when resuming.
	(Pbkpt_addr): New function.
	* libproc/libproc.h: Prototype it.
	* libproc/rtld_db.c (rd_ldso_consistent_end): Use it.

	* libproc/Pcontrol.h: Fix comment.  Remove prototype of function
	now static.
	(ps_prochandle_t.map_exec): Make an index, not a pointer.
	(ps_prochandle_t.map_ldso): Likewise.
	(ps_prochandle_t.lmids_valid): New, 0 if the link map is unscanned.
	* libproc/Psymtab.c (mapping_purge): Adjust accordingly.
	(object_name_to_map): Likewise.
	(object_to_map): Likewise.
	(Pupdate_maps): Likewise.  Cater for realloc() failure and NULL
	map_file.  Do not look for the dynamic linker in static processes.
	Do not rd_loadobj_iter() ourself: merely set lmids_valid.
	(Paddr2idx): New, like Paddr2mptr() but returning an index.
	(Paddr2mptr): Reimplement in terms of Paddr2idx().

	(file_info_new): Populate file_map.
	(Pbuild_file_symtab): Do not fail if text mappings have no
	file_map.

	(Pupdate_lmids): New, scan the link map iff we have valid
	mappings and are dynamic and haven't done so already.
	(Paddr_to_map): Call it.